fix: 🐛 set iconsize to full width on mobile

--- a/src/components/cms/bnb-cms-text-icon/styles.scss
+++ b/src/components/cms/bnb-cms-text-icon/styles.scss
@@ -38,8 +38,7 @@
 		}
 
 		&--right {
-			width: 50%;
-			margin: $margin-left-right-medium auto;
+			margin-top: $margin-left-right-medium;
 		}
 
 		@include fromBreakpointL {
